top-nav-visible hover text correction

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -179,6 +179,9 @@ $sizes: ($general-col: '' , $max-lg: '-lg', $max-md: '-md', $max-sm: '-sm', $max
         &:hover
           background: rgba(22, 160, 133, 0.5)
           transition: 0.25s
+          a
+            color: #fff
+            transition: color 0.5s
         a.livello-link
           opacity: 1
           transition: 0.5s
